🐛 Fix: Header z-index

--- a/src/app/modules/home/components/experience/experience.component.scss
+++ b/src/app/modules/home/components/experience/experience.component.scss
@@ -1,3 +1,6 @@
+.sticky-content {
+  z-index: 50;
+}
 .experience-card {
   max-width: 710px;
 }
